--- a/client/src/styles/Username.module.css
+++ b/client/src/styles/Username.module.css
@@ -8,7 +8,7 @@
 }
 
 .profile_img{
-    @apply border-4 border-gray-100 w-[135px] rounded-full shadow-lg cursor-pointer;
+    @apply border-4 border-gray-100 w-[135px] h-[135px] rounded-full shadow-lg cursor-pointer;
     @apply hover:border-gray-200;
 }
 
@@ -23,4 +23,7 @@
 
 .btn:hover{
     background-color: #ff6a6a;
+}
+input[type='file']{
+    display: none;
 }
